chat overflow wrap fix

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -259,12 +259,15 @@ textarea:focus, input:focus{
 .message__body{
   p{
     background: var(--background-light);
-    border-radius: 50px;
+    border-radius: 24px;
     padding: 12px;
     font-size: 0.8rem;
-    width: max-content;
+    width: 100%;
+    max-width: max-content;
+    overflow-wrap: break-word;
   }
 }
+
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 *::-webkit-scrollbar {
